--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-saga/types": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.1",
     "cra-template-typescript-redux": "0.3.13",
     "normalize.scss": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "redux-saga": "^1.2.2",
     "sass": "^1.57.1"
   },
   "scripts": {
