--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@redux-saga/types": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.1",
     "cra-template-typescript-redux": "0.3.13",
+    "formik": "^2.2.9",
     "normalize.scss": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
