--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "fix": "eslint src --ext .js,.jsx,.ts,.tsx  --fix"
+    "fix": "eslint src --ext .js,.jsx,.ts,.tsx  --fix",
+    "serveprod": "npm run build && http-server --proxy http://127.0.0.1:5000? -o -p 5000 ./build",
+    "serve": "http-server --proxy http://127.0.0.1:5000? -o -p 5000 ./build"
   },
   "eslintConfig": {
     "extends": "react-app"
