--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@redux-saga/types": "^1.2.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "antd": "^5.10.2",
     "cra-template-typescript-redux": "0.3.13",
     "formik": "^2.2.9",
     "normalize.scss": "^0.1.0",
+    "normalizr": "^3.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
